# TheBus-ADV-AutoPilot

./: .gitattributes  .gitignore  INSTALL.md  LICENSE  README.md
python/: README.md  pyproject.toml
python/tests/: mock_game.py  test_autopilot.py  test_bridge.py  test_deck_plugin.py
python/tests/data/: map.json  mission.json  player.json  roadmap.json  vehicle_current.json  vehicles.json  world.json
python/thebus_ai_bridge/: __init__.py  ai_driver.py  autopilot.py  bridge.py  capture.py  catalog.py  cli.py  config.py  deck_plugin.py  env.py  gui.py  mcp_server.py  pad.py
python/thebus_ai_bridge/examples/: line_driver.py
streamdeck_plugin/: build.ps1  install.ps1  launcher.cpp  manifest.json
streamdeck_plugin/com.thebusaibridge.sdPlugin/: manifest.json
streamdeck_plugin/com.thebusaibridge.sdPlugin/pi/: busbutton.html  feature.html
streamdeck_plugin/pi/: feature.html
tools/: app_entry.py  build_app.ps1  gen_button_pi.py  gen_deck_icons.py  gen_feature_pi.py  steam_companion.cpp
