[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thebus-ai-bridge"
version = "0.1.0"
description = "Advanced autopilot (no AI - deterministic control logic) for The Bus (TML-Studios) via the official telemetry interface, plus developer tooling: virtual-gamepad controls, GUI, Stream Deck plugin, optional MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []  # zero-dependency core (stdlib urllib/tkinter only)

[project.optional-dependencies]
pad = ["vgamepad>=0.1"]          # analog steering/throttle/brake (ViGEm)
mcp = ["mcp>=1.0"]               # MCP server for LLM agents
vision = ["mss>=9.0"]            # screenshots for vision agents
all = ["vgamepad>=0.1", "mcp>=1.0", "mss>=9.0"]

[project.urls]
Homepage = "https://github.com/King4s/thebus-ai-connector"

[project.scripts]
thebus-ai-bridge = "thebus_ai_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["thebus_ai_bridge*"]
